--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,11 @@ input.warning {
 #remaining-chars.warning {
   color: rgb(211, 109, 26);
 }
+
+input.error {
+  background-color: rgb(247, 141, 141);
+}
+
+#remaining-chars.error {
+  color: rgb(209, 0, 0);
+}
